--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,27 @@
 # Site wide configuration
 
-title: Site Title
-locale: en_US
+title: John L. Gardenghi
+locale: pt_BR
 logo: # filename of a logo image that has been placed into your images directory
 
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
-  name: Your Name
+  name: John L. Gardenghi
   avatar: bio-photo.jpg
-  bio: "A brief description of yourself."
-  email: #emailaddress
+  bio: "I am an assistant professor in the Faculty UnB Gama at the University of Brasilia. My research interests include computational methods of optimization and algorithms."
+  email: john.gardenghi@unb.br
   # Do not include the @ symbol in your Twitter username
   twitter: #username
   linkedin: #username
-  github: #username
-  orcid: # ID Number (ex. 0000-0000-0000-0000)
-  researchgate: #username
+  github: johngardenghi
+  orcid: 0000-0003-4443-8090
+  researchgate: John-Gardenghi
   mendeley: #username
   google:
     plus: #username
     analytics:
     verify:
-    scholar: #id
+    scholar: 5awmfGgAAAAJ
   facebook: #username
   instagram: #username
   bing-verify:
