Adicionando cv lattes

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ owner:
   avatar: bio-photo.jpg
   bio: "I am an assistant professor in the Faculty UnB Gama at the University of Brasilia. My research interests include computational methods of optimization and algorithms."
   email: john.gardenghi@unb.br
+  lattes: 1723982878095429
   # Do not include the @ symbol in your Twitter username
   twitter: #username
   linkedin: #username
