Mudando short bio.

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo: # filename of a logo image that has been placed into your images directory
 owner:
   name: John L. Gardenghi
   avatar: bio-photo.jpg
-  bio: "I am an assistant professor in the Faculty UnB Gama at the University of Brasilia. My research interests include computational methods of optimization and algorithms."
+  bio: "Professor (Assistant), Faculty UnB Gama, University of Brasilia."
   email: john.gardenghi@unb.br
   lattes: 1723982878095429
   # Do not include the @ symbol in your Twitter username
